// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`hydrating state can CLEAR to reset state 1`] = `
{
  "countAutomaticRefresh": {
    "enabled": true,
    "loading": false,
  },
  "databases": [],
  "functions": [],
  "labels": [],
  "nodes": 0,
  "procedures": [],
  "properties": [],
  "relationshipTypes": [],
  "relationships": 0,
  "role": null,
  "server": {
    "edition": null,
    "storeSize": null,
    "version": null,
  },
  "serverConfigDone": false,
  "settings": {
    "allowOutgoingConnections": false,
    "allowTelemetry": true,
    "authEnabled": true,
    "credentialTimeout": 0,
    "metricsNamespacesEnabled": false,
    "metricsPrefix": "neo4j",
    "postConnectCmd": "",
    "remoteContentHostnameAllowlist": "guides.neo4j.com, localhost",
    "retainConnectionCredentials": false,
    "retainEditorHistory": false,
  },
  "trialStatus": {
    "status": "unknown",
  },
}
`;

exports[`hydrating state can update meta values with UPDATE 1`] = `
{
  "myKey": "yo",
  "noKey": true,
  "secondKey": true,
}
`;

exports[`hydrating state can update server info 1`] = `
{
  "server": {
    "edition": "enterprise",
    "storeId": "xxxx",
    "version": "3.2.0-RC2",
  },
  "shouldKeep": true,
}
`;

exports[`hydrating state can update server settings 1`] = `
{
  "settings": {
    "browser.test": 1,
  },
  "shouldKeep": true,
}
`;

exports[`hydrating state should merge inital state and state on load 1`] = `
{
  "countAutomaticRefresh": {
    "enabled": true,
    "loading": false,
  },
  "databases": [],
  "foo": "bar",
  "functions": [],
  "labels": [],
  "nodes": 0,
  "procedures": [],
  "properties": [],
  "relationshipTypes": [],
  "relationships": 0,
  "role": null,
  "server": {
    "edition": null,
    "storeSize": null,
    "version": null,
  },
  "serverConfigDone": false,
  "settings": {
    "allowOutgoingConnections": false,
    "allowTelemetry": true,
    "authEnabled": true,
    "credentialTimeout": 0,
    "metricsNamespacesEnabled": false,
    "metricsPrefix": "neo4j",
    "postConnectCmd": "",
    "remoteContentHostnameAllowlist": "guides.neo4j.com, localhost",
    "retainConnectionCredentials": false,
    "retainEditorHistory": false,
  },
  "trialStatus": {
    "status": "unknown",
  },
}
`;
